# tome

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  NU_SHELL_INTEGRATION_REPORT.md  clippy.toml  flake.nix  sgconfig.yml
.gitbits/: config.nix
crates/base/: Cargo.toml
crates/base/src/: color.rs  geometry.rs  key.rs  lib.rs  range.rs  selection.rs
crates/base/src/key/: tests.rs
crates/base/src/transaction/: changeset.rs  mod.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: completion.rs  keymap_registry.rs  lib.rs  registry_impls.rs  terminal_config.rs
crates/core/src/editor_ctx/: mod.rs
crates/core/src/editor_ctx/result_handlers/: core.rs  edit.rs  mod.rs  mode.rs  palette.rs
crates/core/src/index/: builders.rs  lookups.rs  mod.rs  types.rs
crates/core/src/movement/: search.rs
crates/core/src/notifications/: extensions.rs  mod.rs
crates/core/tests/: registry.rs
crates/extensions/: Cargo.toml
crates/extensions/builtins/lsp/: hooks.rs  mod.rs
crates/extensions/extensions/acp/: commands.rs  handler.rs  panel.rs
crates/extensions/extensions/agentfs/: README.md  commands.rs  mod.rs
crates/extensions/extensions/lsp/: hooks.rs  mod.rs
crates/extensions/extensions/zenmode/: mod.rs
crates/input/: Cargo.toml
crates/input/src/: command.rs  handler.rs  insert.rs  lib.rs  normal.rs  pending.rs  tests.rs  types.rs
crates/input/tests/: keybindings.rs
crates/keymap/: Cargo.toml
crates/keymap/derive/src/: item.rs  lib.rs
crates/keymap/src/: config.rs  kdl.rs  lib.rs  matcher.rs
crates/keymap/src/backend/: evildoer.rs  mod.rs
crates/language/: Cargo.toml
crates/language/src/: build.rs  config.rs  grammar.rs  highlight.rs  language.rs  lib.rs  loader.rs  query.rs  runtime.rs  syntax.rs
crates/language/tests/: integration.rs
crates/macro/: Cargo.toml
crates/macro/src/: api.rs  dispatch.rs  events.rs  extension.rs  keybindings.rs  lib.rs  notification.rs  option.rs
crates/registry/actions/: Cargo.toml
crates/registry/actions/src/: definition.rs  keybindings.rs  lib.rs  macros.rs  motion_helpers.rs  pending.rs  result.rs
crates/registry/actions/src/editor_ctx/: capabilities.rs  handlers.rs  mod.rs
crates/registry/actions/src/impls/: diagnostic.rs  insert.rs  lsp.rs  mod.rs  modes.rs  motions.rs  palette.rs  prefixes.rs  scroll.rs  selection_ops.rs  text_objects.rs  window.rs
crates/registry/commands/: Cargo.toml
crates/registry/commands/src/: lib.rs
crates/registry/commands/src/impls/: buffer.rs  diagnostic.rs  edit.rs  help.rs  lsp.rs  mod.rs  quit.rs  registry_diag.rs  test_notify.rs  theme.rs  write.rs
crates/registry/hooks/: Cargo.toml
crates/registry/hooks/src/: context.rs  lib.rs
crates/registry/motions/: Cargo.toml
crates/registry/motions/src/: lib.rs  macros.rs
crates/registry/motions/src/impls/: basic.rs  document.rs  mod.rs
crates/registry/motions/src/movement/: find.rs  mod.rs
crates/registry/text_objects/: Cargo.toml
crates/registry/text_objects/src/: lib.rs  macros.rs
crates/registry/text_objects/src/impls/: argument.rs  line.rs  mod.rs  number.rs  paragraph.rs  quotes.rs  word.rs
crates/registry/themes/: Cargo.toml
crates/registry/themes/src/: lib.rs  syntax.rs
crates/term/: Cargo.toml
crates/term/src/: app.rs  backend.rs  cli.rs  main.rs  terminal.rs  tests.rs
crates/term/src/log_launcher/: protocol.rs  viewer.rs
crates/term/src/snapshots/: evil__tests__suite__render_empty.snap  xeno__tests__suite__render_empty.snap  xeno__tests__suite__render_with_content.snap
crates/term/tests/: completion.rs  helpers.rs  kitty_multiselect.rs  kitty_separator_animation.rs  kitty_split_resize.rs  kitty_terminal_colors.rs  kitty_viewport_stability.rs  lsp_code_actions.rs  lsp_diagnostics.rs  lsp_helpers.rs  lsp_hover.rs  lsp_navigation.rs
crates/tome-core/: Cargo.toml
crates/tome-core/benches/: editing.rs
crates/tome-core/src/: graphemes.rs  input.rs  key.rs  keymap.rs  lib.rs  movement.rs  range.rs  selection.rs  transaction.rs
crates/tome-core/src/ext/: commands.rs  filetypes.rs  index.rs  macros.rs  mod.rs  motions.rs  objects.rs
crates/tome-core/src/ext/actions/: delete.rs  editing.rs  find.rs  insert.rs  mod.rs  modes.rs  motions.rs  regex_select.rs  scroll.rs  search.rs  selection_ops.rs  text_objects.rs
crates/tome-core/src/ext/commands/: buffer.rs  cabi.rs  edit.rs  help.rs  mod.rs  quit.rs  test_notify.rs  write.rs
crates/tome-core/src/ext/editor_ctx/: capabilities.rs  handlers.rs  mod.rs
crates/tome-core/src/ext/filetypes/: mod.rs
crates/tome-core/src/ext/hooks/: log_buffer_open.rs  log_mode_change.rs  mod.rs
crates/tome-core/src/input/: handler.rs  insert.rs  normal.rs  pending.rs  tests.rs  types.rs
crates/tome-core/src/movement/: find.rs  mod.rs  objects.rs  search.rs  word.rs
crates/tome-term/: Cargo.toml  build.rs
crates/tome-term/extensions/agentfs/: commands.rs  mod.rs
crates/tome-term/src/: app.rs  backend.rs  capabilities.rs  commands.rs  editor.rs  main.rs  nu_engine.rs  render.rs  terminal_panel.rs  tests.rs  theme.rs
crates/tome-term/src/acp/: client.rs
crates/tome-term/src/editor/: actions.rs  input_handling.rs  mod.rs  navigation.rs  types.rs
crates/tome-term/src/plugins/: manager.rs
crates/tome-term/src/render/: completion.rs  document.rs
crates/tome-term/src/snapshots/: tome__tests__insert_newline_single_cursor.snap  tome__tests__line_numbers_multiple_lines.snap  tome__tests__render_after_typing.snap  tome__tests__render_cursor_movement.snap  tome__tests__render_empty.snap  tome__tests__render_insert_mode.snap  tome__tests__render_with_content.snap  tome__tests__render_with_selection.snap  tome__tests__soft_wrap_long_line.snap  tome__tests__soft_wrap_word_boundary.snap  tome__tests__wrapped_line_dim_gutter.snap
crates/tome-term/src/themes/: gruvbox.rs  monokai.rs  one_dark.rs  solarized.rs
crates/tome-term/tests/: kitty_multiselect.rs  kitty_terminal.rs
lib/notifications/: Cargo.toml
lib/notifications/src/: lib.rs
lib/notifications/src/notifications/: mod.rs  orc_manager.rs  orc_render.rs  orc_stacking.rs
(+653 files in other folders)
