[package]
name = "evildoer-core"
description = "Core infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["host"]
host = [
    "dep:regex",
    "dep:termina",
    "dep:unicode-segmentation",
    "dep:unicode-width",
    "dep:smallvec",
]

[dependencies]
async-trait.workspace = true
evildoer-base.workspace = true
evildoer-keymap.workspace = true
evildoer-macro.workspace = true
evildoer-registry.workspace = true
futures.workspace = true
linkme.workspace = true
paste.workspace = true
regex = { workspace = true, optional = true }
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec = { workspace = true, optional = true }
strsim.workspace = true
termina = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
unicode-segmentation = { workspace = true, optional = true }
unicode-width = { workspace = true, optional = true }
