[package]
name = "evildoer-input"
description = "Input handling and state machine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-base.workspace = true
evildoer-core.workspace = true
evildoer-keymap.workspace = true
serde.workspace = true
tracing.workspace = true
[dev-dependencies]
