[package]
name = "evildoer-keymap"
description = "Key mapping library with compile-time validated derive macros and declarative configuration."
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true

[lib]
doctest = false

[features]
default = ["derive", "termina", "kdl"]
derive = ["dep:evildoer-keymap-derive"]
termina = ["dep:termina"]
kdl = ["dep:kdl"]

[dependencies]
evildoer-keymap-derive = { path = "./derive", optional = true }
evildoer-keymap-parser = { path = "./parser" }
kdl = { workspace = true, optional = true }
serde = { workspace = true }
termina = { workspace = true, optional = true }

[dev-dependencies]
kdl = { workspace = true }
toml = { workspace = true }
