[package]
name = "tome-language"
description = "Language configuration and metadata for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cc = "1.0"
log.workspace = true
once_cell.workspace = true
ratatui.workspace = true
regex.workspace = true
ropey.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
tome-base.workspace = true
tome-manifest.workspace = true
tree-house.workspace = true
libloading.workspace = true

[dev-dependencies]
tempfile.workspace = true
