[package]
name = "evildoer-macro"
description = "Procedural macros for Evildoer editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
evildoer-keymap-parser = { workspace = true }
kdl = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
