[package]
name = "tome-term"
description = "Terminal frontend for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
agentfs-sdk.workspace = true
anyhow = "1.0"
async-trait = "0.1"
clap.workspace = true
futures = "0.3"
home = "0.5"
linkme.workspace = true
parking_lot = "0.12"
ratatui.workspace = true
serde.workspace = true
termina.workspace = true
thiserror.workspace = true
tokio.workspace = true 
tokio-util.workspace = true
tome-api = { path = "../api" }
tome-core.workspace = true
tome-extensions = { path = "../extensions" }
toml.workspace = true
tui-term = "0.2.0"

[dev-dependencies]
insta.workspace = true
kitty-test-harness.workspace = true
serial_test.workspace = true
termwiz = "0.23"
