[package]
name = "tome-core"
description = "Core editing primitives for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
linkme.workspace = true
paste.workspace = true
regex.workspace = true
ropey.workspace = true
smallvec.workspace = true
termina.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "editing"
harness = false
