[package]
name = "tome-core"
description = "Core editing primitives for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
plugins = ["dep:extism"]

[dependencies]
extism = { workspace = true, optional = true }
linkme.workspace = true
paste.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
termina.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "editing"
harness = false
