[package]
name = "tome-core"
description = "Core editing primitives for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["host"]
host = ["dep:linkme", "dep:ropey", "dep:regex", "dep:termina", "dep:unicode-segmentation", "dep:unicode-width", "dep:smallvec", "dep:paste", "dep:extism"]
guest = ["dep:extism-pdk"]
plugins = ["dep:extism"]


[dependencies]
extism = { workspace = true, optional = true }
extism-pdk = { version = "1.0", optional = true }
linkme = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true, optional = true }
termina = { workspace = true, optional = true }
unicode-segmentation = { workspace = true, optional = true }
unicode-width = { workspace = true, optional = true }
tome-macro = { path = "../tome-macro" }
# tome-plugin removed


[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "editing"
harness = false
