[package]
name = "tome-term"
description = "Terminal frontend for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ratatui.workspace = true
termina.workspace = true
tome-core = { workspace = true }

[dev-dependencies]
insta.workspace = true
