[package]
name = "tome-term"
description = "Terminal frontend for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["plugins"]
plugins = ["tome-core/plugins"]

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
clap.workspace = true
directories = "6.0.0"
ratatui.workspace = true
termina.workspace = true
tome-core = { workspace = true }

[dev-dependencies]
insta.workspace = true
