[package]
name = "ratatui-notifications"
version = "0.1.0"
edition = "2021"
description = "Animated notification system for Ratatui terminal applications"
license = "MIT"
repository = "https://github.com/your-org/ratatui-notifications"
keywords = ["ratatui", "tui", "notifications", "terminal", "animation"]
categories = ["command-line-interface", "gui"]

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
log = "0.4"
ratatui = { workspace = true, features = ["crossterm"] }
thiserror = "2.0.12"
