[package]
name = "evildoer-registry-actions"
description = "Actions registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
handler-coverage = []

[dependencies]
evildoer-base.workspace = true
evildoer-macro.workspace = true
evildoer-registry-commands.workspace = true
evildoer-registry-core.workspace = true
evildoer-registry-motions.workspace = true
evildoer-registry-text-objects.workspace = true
linkme.workspace = true
paste.workspace = true
ropey.workspace = true
tracing.workspace = true
