[package]
name = "evildoer-registry-commands"
description = "Command registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-registry-core.workspace = true
evildoer-registry-motions.workspace = true
evildoer-registry-text-objects.workspace = true
futures.workspace = true
linkme.workspace = true
paste.workspace = true
thiserror.workspace = true
