[package]
name = "evildoer-registry-hooks"
description = "Hook registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-base.workspace = true
evildoer-macro.workspace = true
evildoer-registry-core.workspace = true
linkme.workspace = true
paste.workspace = true
tracing.workspace = true
