[package]
name = "evildoer-registry-text-objects"
description = "Text objects registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-base.workspace = true
evildoer-registry-core.workspace = true
evildoer-registry-motions.workspace = true
linkme.workspace = true
paste.workspace = true
ropey.workspace = true
