[package]
name = "evildoer-registry-themes"
description = "Theme and syntax highlighting registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-base.workspace = true
evildoer-registry-motions.workspace = true
linkme.workspace = true
strsim.workspace = true
